[package]
name = "tinytable"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MonterraByte/tinytable"
description = "A tiny text table drawing library"
categories = ["command-line-interface", "text-processing", "visualization"]
keywords = ["table", "tabular", "terminal", "text", "unicode"]
exclude = ["/.github"]

[dependencies]
fallible-iterator = { version = "0.3", optional = true }
unicode-width = { version = "0.2", default-features = false }
unicode-segmentation = "1.12"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
