[package]
name = "tinytable"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MonterraByte/tinytable"
description = "A tiny text table drawing library"
categories = ["command-line-interface", "text-processing", "visualization"]
keywords = ["table", "tabular", "terminal", "text", "unicode"]
exclude = ["/.github"]

[dependencies]
unicode-width = { version = "0.2", default-features = false }
unicode-segmentation = "1.12"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "benches"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tinytable_profile_alloc)'] }
